--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "It is a photo gallery using flip animation to achieve 60 fps to achieve smooth animation",
   "scripts": {
     "test": "nodemon node server.js",
+    "watch": "webpack --watch",
     "dev": "webpack",
     "start": "webpack-dev-server --open",
-    "prod": "webpack -p"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -18,24 +19,22 @@
   "author": "saeed",
   "license": "ISC",
   "devDependencies": {
-    "babel-preset-env": "^1.6.1",
-    "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^0.28.11",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^1.1.11",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^4.2.0",
-    "node-sass": "^4.8.3",
-    "sass-loader": "^6.0.7",
+    "@babel/core": "^7.18.13",
+    "@babel/preset-env": "^7.18.10",
+    "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "sass": "^1.54.5",
+    "sass-loader": "^13.0.2",
     "style-loader": "^0.20.3",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.3"
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.10.0"
   },
   "dependencies": {
-    "image-trace-loader": "^0.1.0",
-    "lozad": "^1.4.0",
-    "page": "^1.8.6"
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+    "lozad": "^1.4.0"
   }
 }
